<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131520"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Enter_the_book_image_url"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#131520"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131520"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Enter_the_book_writer_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/writer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#131520"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131520"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Enter_the_book_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#131520"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131520"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Enter_the_book_price"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#131520"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131520"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Enter_a_description"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#131520"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gradient"
        android:text="@string/Add_the_book"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>